# typed-bindings-example

./: .gitignore  CMakeLists.txt  pyproject.toml  test.py
src/: algorithm.h  comparer.h  main.cpp  table.h  types.h
src/typed_bindings/: __init__.py
